--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.53",
     "@farcaster/frame-wagmi-connector": "^0.0.42",
+    "@heroicons/react": "^2.2.0",
     "@reown/appkit": "^1.7.7",
     "@reown/appkit-adapter-wagmi": "^1.7.7",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "wagmi": "^2.15.4"
+    "wagmi": "^2.15.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
